# coursework_bank_application

./: .env.example  .flake8  .gitignore  README.md  logging.config  logs_file.txt  main.py  pyproject.toml  reports_file.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_settings_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
logs/: reports_file.txt
src/: logs_file.txt  reports.py  services.py  settings.py  user_settings.json  utils.py  views.py
tests/: conftest.py  reports_file.txt  test_reports.py  test_services.py  test_utils.py  test_views.py  tets_utils.py  tets_utils1.py
